# tornado-track

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  training-issues-2.md
.github/skills/: grib-skills.md
config/: __init__.py  config.yaml
data/: build_zarr_store.py  dat_ingest.py  grib_to_xarray.py  mrms_download.py  mrms_download_fast.py  scan_events.py
docs/: training-issues-1.md  zarr-build-plan.md  zarr-building-issues-1.md  zarr-building-issues-2.md
env/: tornado_env.py
evaluation/: evaluate.py  wall_of_shame.py
inference/: predict.py
model/: policy.py  reward.py
training/: ppo_base.py  stage1_follower.py  stage2_hunter.py  stage3_surveyor.py
viz/: __init__.py  event_viewer.py
