[project]
name = "tornado-track"
version = "0.1.0"
description = "Tornado storm path tracking and identification using reinforcement learning on MRMS radar data"
requires-python = ">=3.11"
dependencies = [
    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyarrow>=14.0.0",
    "pyproj>=3.6.0",
    # GRIB / Meteorological
    "cfgrib>=0.9.10",
    "xarray>=2024.1.0",
    "dask[array]>=2024.1.0",
    "zarr>=2.16.0",
    "fsspec>=2024.1.0",
    # AWS
    "boto3>=1.34.0",
    "s3fs>=2024.1.0",
    # HTTP / Async
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    # RL / Training
    "gymnasium>=0.29.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "tensorboard>=2.16.0",
    # Data / Numeric
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    # Visualization
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "streamlit>=1.34.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.20.0",
    "pillow>=10.0.0",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
dat-ingest     = "data.dat_ingest:main"
mrms-download  = "data.mrms_download:main"
mrms-download-fast = "data.mrms_download_fast:main"
zarr-build     = "data.build_zarr_store:main"
scan-events    = "data.scan_events:main"
train-stage1   = "training.stage1_follower:main"
train-stage2   = "training.stage2_hunter:main"
train-stage3   = "training.stage3_surveyor:main"
evaluate       = "evaluation.evaluate:main"
wall-of-shame  = "evaluation.wall_of_shame:main"
predict        = "inference.predict:main"
viz-events     = "viz.event_viewer:main"

[tool.uv]
# CleanRL must be installed from source — add after `uv sync` with:
#   uv pip install "cleanrl @ git+https://github.com/vwxyzjn/cleanrl.git"
# eccodes (GRIB2 C library) is a system/conda dependency — see README.

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "data", "env", "model", "training", "evaluation", "inference", "viz"]
